# llama-autotune

./: .gitignore  CHANGELOG.md  LICENSE  README.md  best.json  pyproject.toml
.github/workflows/: ci.yml
src/llama_autotune/: __init__.py  __main__.py  benchmark.py  cli.py  constraints.py  database.py  hardware.py  heuristics.py  model_inspector.py  models.py  multi_gpu.py  optimizer.py  profiles.py  search_space.py
tests/: test_benchmark_integration.py  test_benchmark_parser.py  test_cli.py  test_constraints.py  test_database.py  test_hardware.py  test_heuristics.py  test_model_inspector.py  test_models.py  test_multi_gpu.py  test_optimizer_scoring.py  test_profiles.py  test_search_space.py
