[project]
name = "llama-autotune"
version = "0.2.0"
description = "Benchmarking and optimization tool for llama.cpp"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "pydantic>=2.0",
    "rich>=13.0",
    "sqlalchemy>=2.0",
    "optuna>=4.0",
    "psutil>=6.0",
    "structlog>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llama_autotune"]

[project.scripts]
llama-autotune = "llama_autotune.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
