[project]
name = "llama-autotune"
version = "0.3.0"
description = "Benchmarking and optimization tool for llama.cpp"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["llama.cpp", "llm", "benchmark", "optimization", "gguf", "inference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Benchmark",
]
dependencies = [
    "typer>=0.15",
    "pydantic>=2.0",
    "rich>=13.0",
    "sqlalchemy>=2.0",
    "optuna>=4.0",
    "psutil>=6.0",
    "structlog>=24.0",
]

[project.urls]
Homepage = "https://github.com/Najafu/llama-autotune"
Repository = "https://github.com/Najafu/llama-autotune"
Issues = "https://github.com/Najafu/llama-autotune/issues"
Changelog = "https://github.com/Najafu/llama-autotune/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llama_autotune"]

[project.scripts]
llama-autotune = "llama_autotune.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
